--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 
     <h1>Portail de Cours</h1>
 
+    <!-- LEPL1402 -->
     <div class="course-section">
         <h2>LEPL1402 - Informatique 2</h2>
         <ul>
@@ -86,6 +87,7 @@
         </ul>
     </div>
 
+    <!-- LANGL1383 -->
     <div class="course-section">
         <h2>LANGL1383 - Anglais 3 pour informaticiens</h2>
         <ul>
@@ -94,6 +96,7 @@
         </ul>
     </div>
 
+    <!-- LBIR1212 -->
     <div class="course-section">
         <h2>LBIR1212 - Probabilités et statistique (I)</h2>
         <ul>
@@ -102,6 +105,7 @@
         </ul>
     </div>
 
+    <!-- LECGE1222C -->
     <div class="course-section">
         <h2>LECGE1222C - Microéconomie</h2>
         <ul>
@@ -110,6 +114,7 @@
         </ul>
     </div>
 
+    <!-- LEPL1109 -->
     <div class="course-section">
         <h2>LEPL1109 - Statistics and data science</h2>
         <ul>
@@ -118,7 +123,47 @@
         </ul>
     </div>
 
-    <!-- Ajoute les autres cours de la même manière -->
+    <!-- LINFO1114 -->
+    <div class="course-section">
+        <h2>LINFO1114 - Mathématiques discrètes</h2>
+        <ul>
+            <li><a href="https://moodle.uclouvain.be/course/view.php?id=2409" target="_blank">Moodle</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1j40Qt-QTWbfkxCwU4C81LRNRDXVaBO4a?usp=drive_link" target="_blank">Google Drive</a></li>
+        </ul>
+    </div>
+
+    <!-- LINFO1121 -->
+    <div class="course-section">
+        <h2>LINFO1121 - Algorithmique et structures de données</h2>
+        <ul>
+            <li><a href="https://moodle.uclouvain.be/course/view.php?id=1049" target="_blank">Moodle</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1shgGiFzpYs2vbW8czi1yWROd0ky_T7NO?usp=drive_link" target="_blank">Google Drive</a></li>
+            <li><a href="https://pschaus.github.io/LINFO1121/" target="_blank">Livre</a></li>
+            <li><a href="https://github.com/pschaus/algorithms_exercises_students" target="_blank">Github Exercices</a></li>
+            <li><a href="https://github.com/pschaus/algorithms_exercises" target="_blank">Github Solutions</a></li>
+            <li><a href="https://inginious.info.ucl.ac.be/course/LINFO1121" target="_blank">Inginious</a></li>
+        </ul>
+    </div>
+
+    <!-- LINFO1122 -->
+    <div class="course-section">
+        <h2>LINFO1122 - Méthodes de conception de programmes</h2>
+        <ul>
+            <li><a href="https://moodle.uclouvain.be/course/view.php?id=4305" target="_blank">Moodle</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1j4sVSZ9cx5nTT9kUBiOjaLL5yPpVn-C-?usp=drive_link" target="_blank">Google Drive</a></li>
+        </ul>
+    </div>
+
+    <!-- LINFO1131 -->
+    <div class="course-section">
+        <h2>LINFO1131 - Advanced programming language concepts</h2>
+        <ul>
+            <li><a href="https://moodle.uclouvain.be/course/view.php?id=4310" target="_blank">Moodle</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1j6USd4u84L5P8r8FUa29uvoQNLMQiJPG?usp=drive_link" target="_blank">Google Drive</a></li>
+        </ul>
+    </div>
+
+    <!-- LINFO1252 -->
     <div class="course-section">
         <h2>LINFO1252 - Systèmes Informatiques</h2>
         <ul>
@@ -127,6 +172,15 @@
             <li><a href="https://sites.uclouvain.be/SystInfo/notes/Theorie/" target="_blank">Livre</a></li>
             <li><a href="https://sites.uclouvain.be/SystInfo/notes/Exercices/index.html" target="_blank">Exercices</a></li>
             <li><a href="https://inginious.info.ucl.ac.be/course/LINFO1252" target="_blank">Inginious</a></li>
+        </ul>
+    </div>
+
+    <!-- LCLIG2260 -->
+    <div class="course-section">
+        <h2>LCLIG2260 - Introduction au traitement de la parole</h2>
+        <ul>
+            <li><a href="https://uclouvain.be/cours-2024-lclig2260" target="_blank">Cours</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1vI8Bpy7gNRnynN9gakD2PHnY9nZcooqK?usp=drive_link" target="_blank">Google Drive</a></li>
         </ul>
     </div>
 
